<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Zim Launcher</string>
    <string name="folder_name"></string>
    <string name="work_folder_name">Work</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="safemode_widget_error">Widgets disabled in Safe mode</string>
    <string name="shortcut_not_available">Shortcut isn\'t available</string>
    <string name="home_screen">Home screen</string>
    <string name="custom_actions">Custom actions</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="long_accessible_way_to_add">Double-tap &amp; hold to pick up a widget or use custom actions.</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="widget_accessible_dims_format">%1$d wide by %2$d high</string>
    <string name="add_item_request_drag_hint">Touch &amp; hold to place manually</string>
    <string name="place_automatically">Add automatically</string>
    <string name="all_apps_search_bar_hint">Search apps</string>
    <string name="all_apps_loading_message">Loading apps&#8230;</string>
    <string name="all_apps_no_search_results">No apps found matching \"<xliff:g example="Android" id="query">%1$s</xliff:g>\"</string>
    <string name="all_apps_search_market_message">Search for more apps</string>
    <string name="notifications_header">Notifications</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room in the Favorites tray</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_button_personal_label">Personal apps list</string>
    <string name="all_apps_button_work_label">Work apps list</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="msg_no_phone_permission"><xliff:g example="Launcher3" id="app_name">%1$s</xliff:g> is not allowed to make phone calls</string>
    <plurals name="badged_app_label">
        <item quantity="one"><xliff:g id="app_name" example="Messenger">%1$s</xliff:g>, has <xliff:g id="notification_count" example="1">%2$d</xliff:g> notification</item>
        <item quantity="other"><xliff:g id="app_name" example="Messenger">%1$s</xliff:g>, has <xliff:g id="notification_count" example="3">%2$d</xliff:g> notifications</item>
    </plurals>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="gadget_setup_text">Setup</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="disabled_app_label">Disabled <xliff:g example="Messenger" id="app_name">%1$s</xliff:g></string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="workspace_new_page">New home screen page</string>
    <string name="folder_opened">Folder opened, <xliff:g example="5" id="width">%1$d</xliff:g> by <xliff:g example="3" id="height">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Tap to close folder</string>
    <string name="folder_tap_to_rename">Tap to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="widget_button_text">Widgets</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="settings_button_text">Home settings</string>
    <string name="msg_disabled_by_admin">Disabled by your admin</string>
    <string name="accessibility_action_overview">Overview</string>
    <string name="allow_rotation_title">Allow Home screen rotation</string>
    <string name="allow_rotation_desc">When phone is rotated</string>
    <string name="allow_rotation_blocked_desc">Current Display setting doesn\'t permit rotation</string>
    <string name="icon_badging_desc_on">On</string>
    <string name="icon_badging_desc_off">Off</string>
    <string name="title_missing_notification_access">Notification access needed</string>
    <string name="msg_missing_notification_access">To show Notification Dots, turn on app notifications for <xliff:g example="My App" id="name">%1$s</xliff:g></string>
    <string name="title_change_settings">Change settings</string>
    <string name="auto_add_shortcuts_label">Add icon to Home screen</string>
    <string name="auto_add_shortcuts_description">For new apps</string>
    <string name="icon_shape_system_default">Use system default</string>
    <string name="icon_shape_square">Square</string>
    <string name="icon_shape_squircle">Squircle</string>
    <string name="icon_shape_circle">Circle</string>
    <string name="icon_shape_teardrop">Teardrop</string>
    <string name="icon_shape_cylinder">Cylinder</string>
    <string name="icon_shape_override_progress">Applying icon shape changes</string>
    <string name="package_state_unknown">Unknown</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_search">Search</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed.
        You can remove it, or search for the app and install it manually.
    </string>
    <string name="app_downloading_title"><xliff:g example="Messenger" id="name">%1$s</xliff:g> downloading, <xliff:g example="30%" id="progress">%2$s</xliff:g> complete</string>
    <string name="app_waiting_download_title"><xliff:g example="Messenger" id="name">%1$s</xliff:g> waiting to install</string>
    <string name="widgets_bottom_sheet_title"><xliff:g example="Messenger" id="name">%1$s</xliff:g> widgets</string>
    <string name="action_add_to_workspace">Add to Home screen</string>
    <string name="action_move_here">Move item here</string>
    <string name="item_added_to_workspace">Item added to home screen</string>
    <string name="item_removed">Item removed</string>
    <string name="action_move">Move item</string>
    <string name="move_to_empty_cell">Move to row <xliff:g example="1" id="number">%1$s</xliff:g> column <xliff:g example="1" id="number">%2$s</xliff:g></string>
    <string name="move_to_position">Move to position <xliff:g example="1" id="number">%1$s</xliff:g></string>
    <string name="move_to_hotseat_position">Move to favorites position <xliff:g example="1" id="number">%1$s</xliff:g></string>
    <string name="item_moved">Item moved</string>
    <string name="add_to_folder">Add to folder: <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="add_to_folder_with_app">Add to folder with <xliff:g example="Messenger" id="name">%1$s</xliff:g></string>
    <string name="added_to_folder">Item added to folder</string>
    <string name="create_folder_with">Create folder with: <xliff:g example="Game" id="name">%1$s</xliff:g></string>
    <string name="folder_created">Folder created</string>
    <string name="action_move_to_workspace">Move to Home screen</string>
    <string name="action_move_screen_left">Move screen to left</string>
    <string name="action_move_screen_right">Move screen to right</string>
    <string name="screen_moved">Screen moved</string>
    <string name="action_resize">Resize</string>
    <string name="action_increase_width">Increase width</string>
    <string name="action_increase_height">Increase height</string>
    <string name="action_decrease_width">Decrease width</string>
    <string name="action_decrease_height">Decrease height</string>
    <string name="widget_resized">Widget resized to width <xliff:g example="2" id="number">%1$s</xliff:g> height <xliff:g example="1" id="number">%2$s</xliff:g></string>
    <string name="action_deep_shortcut">Shortcuts</string>
    <string name="shortcuts_menu_description"><xliff:g example="3" id="number_of_shortcuts">%1$d</xliff:g> shortcuts for <xliff:g example="Messenger" id="app_name">%2$s</xliff:g></string>
    <string name="shortcuts_menu_with_notifications_description"><xliff:g example="3" id="number_of_shortcuts">%1$d</xliff:g> shortcuts and <xliff:g example="3" id="number_of_notifications">%2$d</xliff:g> notifications for <xliff:g example="Messenger" id="app_name">%3$s</xliff:g></string>
    <string name="action_dismiss_notification">Dismiss</string>
    <string name="notification_dismissed">Notification dismissed</string>
    <string name="icu_abbrev_wday_month_day_no_year">EEEEMMMd</string>
    <string name="icu_abbrev_time">HH:mm</string>
    <string name="icu_abbrev_time_12h">hh:mm aa</string>
    <string name="icu_abbrev_date"> dd MMMM</string>
    <string name="icu_abbrev_time_date">HH:mm dd MMMM</string>
    <string name="in_smartspace">In \"At a Glance\" widget</string>
    <string name="smartspace_time">Show time</string>
    <string name="smartspace_date">Show time and date</string>
    <string name="smartspace_preferences">Preferences</string>
    <string name="label_search">Search</string>
    <string name="title_show_google_app">Display %1$s</string>
    <string name="pref_show_google_now_summary">@string/msg_minus_one_on_left</string>
    <string name="title_app_suggestions">Display app suggestions</string>
    <string name="summary_app_suggestions">At the top of your All Apps list</string>
    <string name="hide_app_sum">Hide app from the app drawer</string>
    <string name="hide_app">Hide app</string>
    <string name="hide_apps">Hide apps</string>
    <string name="hide_apps_sum">Hide app from the app drawer</string>
    <string name="debug_pref_title">Debug</string>
    <string name="debug_component_name">Component name</string>
    <string name="about">About</string>
    <string name="pref_title__home_opens_drawer">Home button opens app drawer</string>
    <string name="pref_summary__home_opens_drawer">Pressing the home button while on the desktop will open the app drawer</string>
    <string name="title__sort_mode">App Sort</string>
    <string name="pref_icon_pack">Icon pack</string>
    <string name="gesture_swipe_up">Swipe up</string>
    <string name="icon_badging_title">Enable Notifications</string>
    <string name="uninstall_drop_target_label">Uninstall</string>
    <string name="dash_add_target_label">Add to Dash</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="icon_shape_override_label">Icon Shape Override</string>
    <string name="action_preferences">@string/customize</string>
    <string name="smartspace_preferences_in_settings">At a Glance</string>
    <string name="smartspace_preferences_in_settings_desc">Date, time, weather source</string>
    <string name="about_app_version">Version</string>
    <string name="folder_cover_mode">Cover mode</string>
    <string name="folder_cover_mode_desc">Tap to open first app, swipe up to open folder</string>
    <string name="show_in_tabs">Tabs</string>
</resources>