<?xml version="1.0" encoding="utf-8"?><!--
  ~     This file is part of Lawnchair Launcher.
  ~
  ~     Lawnchair Launcher is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Lawnchair Launcher is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Lawnchair Launcher.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <org.zimmob.zimlx.preferences.StyledSwitchPreference
        android:defaultValue="false"
        android:key="pref_iconPopup_uninstall"
        android:icon="@drawable/ic_uninstall_no_shadow"
        android:persistent="true"
        android:title="@string/uninstall_drop_target_label" />

    <org.zimmob.zimlx.preferences.StyledSwitchPreference
        android:defaultValue="true"
        android:key="pref_iconPopup_edit"
        android:icon="@drawable/ic_edit_no_shadow"
        android:persistent="true"
        android:title="@string/action_preferences" />

    <org.zimmob.zimlx.preferences.StyledSwitchPreference
        android:defaultValue="false"
        android:key="pref_iconPopup_dash"
        android:icon="@drawable/ic_add_box"
        android:persistent="true"
        android:title="@string/dash_add_target_label" />
</androidx.preference.PreferenceScreen>
